# temp2

./: .replit  Cargo.toml  README.md  rust_learn.txt  test_article.html  wiki-sanjiv.html
attached_assets/: Pasted--port-python-trafilatura-into-rust-24-hours-ago-HS-harshit181-I-ll-help-you-plan-a-project-to-port-1744639037052.txt  Pasted-BODY-XPATH-XPath-x-for-x-in-self-article-or-self-div-or-self-main-or-self-sect-1744645882468.txt
src/: cli.rs  extractors.rs  html.rs  lib.rs  main.rs  metadata.rs  readability.rs  utils.rs  xpath.rs
tests/: basic_tests.rs
