[package]
name = "trafilatura-rs"
version = "0.1.0"
edition = "2021"
authors = ["Trafilatura Rust Port Contributors"]
description = "A Rust port of Python's trafilatura library for extracting text from web pages"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/user/trafilatura-rs"
keywords = ["web", "scraping", "extraction", "text", "html"]
categories = ["text-processing", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.17"
html5ever = "0.26"
selectors = "0.25"
ego-tree = "0.6"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
url = "2.4"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html-escape = "0.2"
chrono = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.32", features = ["full"] }

[lib]
name = "trafilatura"
path = "src/lib.rs"

[[bin]]
name = "trafilatura"
path = "src/main.rs"
